--- a/cc1_Eulatriz.html
+++ b/cc1_Eulatriz.html
@@ -1,31 +1,33 @@
 <!DOCTYPE html>
+<html>
 <head>
-    	<title>SRC Honesty Store</title>
-    	<style>
-		body {
-			margin: 50px;
-			background-color: #fffde3;
-		}
+        <title>
+            Coding Challenge 1
+        </title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <style>
+            body {
+                background-color: lightseagreen;
+            }
 
-		button {
-			text-align: center;
-			font-size: 15px;
-			padding: 10px;
-			background-color: #F8E8EE;
-			cursor: pointer;
-			border-radius: 15px 15px 15px 15px;
-    		}
-	</style>
-</head>
+            span {
+                background-color:yellow;
+                margin: 10px;
+                padding: 5px;
+            }
+        </style>
+    </head>
 <body>
     	<h1>SRC Honesty Store</h1>
-    	<h2>Menu</h2>
-    	<button onclick="totalP(45)">Burger = ₱45</button>
-    	<button onclick="totalP(30)">Fries = ₱30</button>
-    	<button onclick="totalP(25)">Juice = ₱25</button>
-    	<h2> Total Bill: </h2>
-    	<h3 id="totalPrice">0</h3>
-    	<button onclick="clearP()">clear</button>
+        <div>
+            <span onclick="totalP(50)"> Burger - P50.00</span>
+            <span onclick="totalP(30)"> Fries - P30.00</span>
+            <span onclick="totalP(20)"> Juice - P20.00</span>
+        </div>
+
+        <h4>The total payment is: </h4>
+        <h3 id="totalPrice">0</h3>
+        <span onclick="clearP()">Clear</span>
 
     	<script>
         	let totalPrice = 0;
