--- a/cc4_Eulatriz.html
+++ b/cc4_Eulatriz.html
@@ -1,35 +1,22 @@
 <!DOCTYPE html>
+<html>
 <head>
-  	<title>Replace All</title>
-	<style>
-		body {
-			margin: 50px;
-			background-color: #fffde3;
-		}
-
-		h1 {
-			font-size: 40px;
-			font-family: cursive;
-		}
-	
-		p {
-			font-size: 25px;
-		}
-
-		button {
-			text-align: center;
-			font-size: 15px;
-			padding: 10px;
-			background-color: #F8E8EE;
-			cursor: pointer;
-			border-radius: 15px 15px 15px 15px;
-    		}
-	</style>
-</head>
+        <title>
+            Coding Challenge 4
+        </title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <style>
+            body {
+                background-color: lightseagreen;
+            }
+        </style>
+    </head>
 <body>
   	<h1> Replace All </h1>
-  	<p id="para">The quick brown fox jumps over the lazy dog. Never run out of data. Always check your load balance and subscriptions with just a tap on the GigaLife App!</p>
-  	<button onclick="cchange()">Change Text</button>
+
+        <p id="para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+  	<button onclick="cchange()">Replace</button>
   	<p id="parap"></p>
   	<script>
     		function cchange() {
